# cytrans

./: .gitignore  flake.nix  rust-toolchain.toml
cytrans-cli/: Cargo.nix  Cargo.toml
cytrans-cli/src/: jellyfin.rs  lib.rs  main.rs
cytrans-web/: Cargo.nix  Cargo.toml  start_dev_server.sh
cytrans-web/client/: Cargo.toml
cytrans-web/client/src/: lib.rs
cytrans-web/server/: Cargo.toml
cytrans-web/server-ng/: Cargo.toml
cytrans-web/server-ng/src/: api.rs  common.rs  error.rs  main.rs  static_hosting.rs  static_hosting.rs.orig  util.rs
cytrans-web/server-ng/src/noscript/: mod.rs  noscript_browse_entry_template.html  noscript_browse_template.html
cytrans-web/server/src/: macros.rs  main.rs  ser.rs  state.rs  tr_deserialize.rs
cytrans-web/ws-protocol/: Cargo.toml
cytrans-web/ws-protocol/src/: lib.rs
cytrans-web/www/: folder.png~  index.html  main.css
cytrans-web/www/client/: client.js
libcytrans/: Cargo.toml
libcytrans/src/: codecs.rs  cytube_structs.rs  ffmpeg_languages.rs  ffprobe.rs  lib.rs  metadata.rs  options.rs  transcode.rs
