[package]
name = "cytrans-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
console-menu = { git = "https://github.com/vincent-sparks/console-menu", version = "0.4.1" }
cytrans = { version = "0.3.0", path = "../libcytrans" }
rustyline = "15.0.0"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
