[package]
name = "cytrans-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
console-menu = { git = "https://github.com/vincent-sparks/console-menu", version = "0.4.1" }
cytrans = { version = "0.3.0", path = "../libcytrans" }
isahc = { version = "1.7.2", optional = true }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
strum = { version = "0.27.1", features = ["derive"] }

[features]
jellyfin = ["dep:serde", "dep:serde_json", "dep:isahc"]
default = ["jellyfin"]
