[package]
name = "server-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "unicode"] }
clap = { version = "4.5.37", features = ["derive", "unstable-doc"] }
cytrans = { version = "0.3.0", path = "../../libcytrans", features = ["commands"] }
env_logger = "0.11.8"
libc = "0.2.172"
log = "0.4.27"
percent-encoding = "2.3.1"

[features]
default = ["static_hosting"]
static_hosting = ["dep:actix-files"]
