[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["macros", "ws"] }
cytrans = { path = "../../libcytrans", features = ["commands"] }
cytrans-ws = { path = "../ws-protocol" }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive", "rc"] }
http = "0.2.9"
hyper = "0.14.26"
postcard = { version = "1.0.4", default-features = false, features = ["use-std"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
owning_ref = "0.4.1"
quick_cache = "0.3.0"
diesel = "2.0.4"
regex = "1.8.1"
lazy_static = "1.4.0"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
